--- a/estoque.html
+++ b/estoque.html
@@ -73,6 +73,12 @@
                         <span class="txt-link">Serviços</span>
                     </a>
                 </li>
+                <li class="item-menu">
+                    <a href="os.html">
+                        <span class="icon"><i class="bi bi-file-text"></i></span>
+                        <span class="txt-link">Os</span>
+                    </a>
+                </li>
             </ul>
         </nav>
         
