--- a/tecnico.html
+++ b/tecnico.html
@@ -61,15 +61,21 @@
                     </a>
                 </li>
                 <li class="item-menu">
-                    <a href="tecnico.html">
-                        <span class="icon"><i class="bi bi-person-vcard-fill"></i></span>
-                        <span class="txt-link">Tecnicos</span>
-                    </a>
-                </li>
-                <li class="item-menu">
                     <a href="servico.html">
                         <span class="icon"><i class="bi bi-tools"></i></span>
                         <span class="txt-link">Serviços</span>
+                    </a>
+                </li>
+                <li class="item-menu">
+                    <a href="os.html">
+                        <span class="icon"><i class="bi bi-file-text"></i></span>
+                        <span class="txt-link">Os</span>
+                    </a>
+                </li>
+                <li class="item-menu">
+                    <a href="estoque.html">
+                        <span class="icon"><i class="bi bi-box-seam"></i></span>
+                        <span class="txt-link">Estoque</span>
                     </a>
                 </li>
             </ul>
