--- a/servico.html
+++ b/servico.html
@@ -67,9 +67,15 @@
                     </a>
                 </li>
                 <li class="item-menu">
-                    <a href="servico.html">
-                        <span class="icon"><i class="bi bi-tools"></i></span>
-                        <span class="txt-link">Serviços</span>
+                    <a href="os.html">
+                        <span class="icon"><i class="bi bi-file-text"></i></span>
+                        <span class="txt-link">Os</span>
+                    </a>
+                </li>
+                <li class="item-menu">
+                    <a href="estoque.html">
+                        <span class="icon"><i class="bi bi-box-seam"></i></span>
+                        <span class="txt-link">Estoque</span>
                     </a>
                 </li>
             </ul>
